Some custom modifications + local http 404 page with try again btn...

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#03A9F4</color>
-    <color name="colorOnPrimary">@android:color/white</color>
+    <color name="colorPrimary">#ff9800</color>
+    <color name="colorPrimaryDark">#ff9800</color>
+    <color name="colorAccent">#ff9800</color>
+    <color name="colorOnPrimary">#ffffff</color>
+    <color name="navigationBarColor">#000000</color>
 </resources>
